--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
   <% else %>
     <ul>
   		<% @user_posts.each do |post| %>
-  			<li><%= post.title %></li>
+  			<li><%= post.title %> " @ " <%= post.date %></li>
   		<% end %>
   	</ul>
   <% end %>
