working on ability to create tagalong

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+ <h2> Details: </h2>
   <p> Owner: <%= @post.owner_id %></p> 
   <p> Title: <%= @post.title %> </p>
   <p> Topic: <%= @post.topic %> </p>
@@ -7,5 +8,16 @@
   <p> Details: <%= @post.details %> </p>
   <p> Cancelled: <%= @post.cancelled %> </p>
   <p> Estimated Difficulty: <%= @post.estimated_difficulty %> </p>
+
+  <h2> Tagalongs: </h2>
+  <% @post.tagalongs.each do |tagalong| %>
+    <div style="border:1px solid black">
+      <p><%= tagalong.user.first_name %> <%= tagalong.user.last_name%></p>
+    </div>
+  <% end %>
+
+
+<%= render :partial => "addtagalong_form", locals: { post: @post} %>
+
 
 <%= link_to "Back", posts_path %>
