--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
  <h2> Details: </h2>
+  <p> Post: <%= @post.id %></p> 
   <p> Owner: <%= @post.owner_id %></p> 
   <p> Title: <%= @post.title %> </p>
   <p> Topic: <%= @post.topic %> </p>
