--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,8 +26,8 @@
   </div>
 <% end %>
 
-
-<%= render :partial => "addtagalong_form", locals: { post: @post} %>
-
+<% if !(Tagalong.exists?(:user_id => current_user.id, :post_id => @post.id )) %>
+  <%= render :partial => "addtagalong_form", locals: { post: @post} %>
+<% end %>
 
 <%= link_to "Back", posts_path %>
