--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :first_name %>
   <%= f.input :last_name %>
   <%= f.input :email %>
-  <%= f.input :phone_number %>
+  <%= f.input :phone %>
   <%= f.input :city %>
   <%= f.input :state %>
   <%= f.input :date_of_birth, start_year: Date.today.year - 80, end_year: Date.today.year - 12 %>
