--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -11,12 +11,12 @@
     <!-- Right Nav Section -->
     <ul class="right">
 	<% if current_user != nil %>
-		<li class="active"><%= link_to "User", user_path(current_user) %></li>
-		<li class="inactive"><%= link_to "Post", posts_path %></li>
-		<li class="inactive"><%= link_to "Logout", logout_path %></li>
+		<li class="has-form nav-bar-button"><%= link_to "User", user_path(current_user), {:class => "button round log-in"} %></li>
+		<li class="has-form nav-bar-button"><%= link_to "Post", posts_path, {:class => "button round log-in"} %></li>
+		<li class="has-form nav-bar-button"><%= link_to "Logout", logout_path, {:class => "button round sign-up"} %></li>
 	<% else %>
-		<li class="active"><%= link_to "Log in", login_path %></li>
-		<li class="inactive"><%= link_to "Sign Up", signup_path %></li>
+		<li class="has-form nav-bar-button"><%= link_to "Log in", login_path, {:class => "button round log-in"} %></li>
+		<li class="has-form nav-bar-button"><%= link_to "Sign Up", signup_path, {:class => "button round sign-up"} %></li>
 	<% end %>
     </ul>
   </section>
