added styling for post and view workout buttons

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -53,6 +53,11 @@
 	padding-right: 5rem;
 }
 
+.home-button:hover{
+	background-color: white;
+	color: #37D67A;
+}
+
 .hero .row{
 	padding-top: 20rem;
 }
