basic styling for workout selection

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -61,3 +61,12 @@
 .hero .row{
 	padding-top: 20rem;
 }
+
+.workout{
+	border: 1px #D1D1D1 solid;
+}
+
+.row.full-width {
+  width: 100%;
+  max-width: 100%; 
+}
