--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,22 @@
 <h2>All Upcoming Events</h2>
 
 <% @posts.each do |p| %>
-	<div style="border:1px solid black">
-		<h3><%= p.title %></h3>
-		<p><%= p.topic %></p>
-		<p><%= p.date %></p>
-		<p><%= link_to "View", post_path(p) %></p>
+	<div class="workout">
+		<div class="row">
+		<div class="small-4 columns">
+			<h3><%= p.title %></h3>
+		</div>
+		<div class="small-4 small-offset-4 columns">
+			<h3><%= p.date %></h3>
+		</div>
+		</div>
+		<div class="row">
+			<div class="small-12 columns">
+			<p><%= p.topic %></p>
+			<p><%= p.details %></p>
+			<p><%= link_to "View", post_path(p) %></p>
+			</div>
+		</div>
 	</div>
 <% end %>
 
