--- a/app/views/users/pending_tagalongs.html.erb
+++ b/app/views/users/pending_tagalongs.html.erb
@@ -2,7 +2,7 @@
 <table>
 	<% @pending_tagalongs.each do |pt| %>
 		<tr>
-			<td><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.date.strftime('%m/%d/%Y') %> at <%= pt.post.start_time.strftime('%H:%M %p') %>. Is that ok?</td>
+			<td><%= pt.user.proper_name.to_s %> wants to join you on <%= pt.post.title %> on <%= pt.post.datetime %>. Is that ok?</td>
 			<td><% if pt.approved.nil? || pt.approved == false %> 
                 <%= link_to edit_tagalong_path(id: pt.id, status: "approved") do %>
                   <%= image_tag 'checkmark_empty.png', class: 'checkmark' %>
