--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,4 +9,15 @@
 	</div>
 <% end %>
 
+<h2>My Events</h2>
+
+<% @posts.each do |p| %>
+	<div style="border:1px solid black">
+		<h3><%= p.title %></h3>
+		<p><%= p.topic %></p>
+		<p><%= p.datetime %></p>
+		<p><%= link_to "View", post_path(p) %></p>
+	</div>
+<% end %>
+
 <%= link_to "Create Post", new_post_path %>
