--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,14 +1,17 @@
-<%= simple_form_for @post do |f| %>
-  <%= f.input :title %>
-  <%= f.input :topic %>
-  <%= f.input :date, as: :string, start_date: Date.today, input_html: {class: "datepicker"} %>
-  <%= f.input :start_time %>
-  <%= f.input :expected_duration %>
-  <%= f.input :details %>
-  <%= f.input :cancelled %>
-  <%= f.input :estimated_difficulty %>
-  <%= f.button :submit %>
-<% end %>
-
+<div class="row">
+	<div class="small-8 columns">
+		<%= simple_form_for @post do |f| %>
+		  <%= f.input :title %>
+		  <%= f.input :topic %>
+		  <%= f.input :date, as: :string, start_date: Date.today, input_html: {class: "datepicker"} %>
+		  <%= f.input :start_time, class: 'small-2 columns' %>
+		  <%= f.input :expected_duration %>
+		  <%= f.input :details %>
+		  <%= f.input :cancelled %>
+		  <%= f.input :estimated_difficulty %>
+		  <%= f.button :submit %>
+		<% end %>
+	</div>
+</div>
 <%= link_to "Back", posts_path %>
 
