Added some styling for notifications

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1520,3 +1520,11 @@ div.post_expected_duration_min{
 	float: left;
 }
 
+.notification span:before {
+  font-weight: 900;
+  margin-right: 5px;
+ }
+
+ div.notice{
+  margin-left: 0;
+ }
