Updated navbar and fixed routing

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1527,4 +1527,11 @@ div.post_expected_duration_min{
 
  div.notice{
   margin-left: 0;
+  background-color: #00FF00;
+  opacity: .8;
+  padding: 5px;
+ }
+
+.notificationsToApprove{
+  background-color: red !important;
  }
