--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h2> Details: </h2> 
-<p> Owner: <%= @post.user.proper_name %></p> 
 <p> Title: <%= @post.title %> </p>
+<p> Owner: <%= link_to @post.user.proper_name, user_path(@post.owner_id) %> </p> 
 <p> Topic: <%= @post.topic %> </p>
 <p> Begins: <%= @post.datetime %> </p>
 <p> Expected Duration: <%= @post.expected_duration.strftime("%H hours %M minutes") %> </p>
