--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-8 columns">
-    <%= simple_form_for @user do |f| %>
+    <%= simple_form_for @user, :html => { :multipart => true } do |f| %>
       <%= f.input :first_name %>
       <%= f.input :last_name %>
       <%= f.input :email %>
@@ -11,6 +11,7 @@
       <%= f.input :password %>
       <%= f.input :password_confirmation %>
       <%= f.input :about_me %>
+      <%= f.input :photo %>
       <%= f.button :submit %>
     <% end %>
   </div>
