Sorting by workout type works. Separate page for search results in place.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,4 +11,9 @@
   	<%= link_to "Post a Workout", new_post_path, {:class => "button round home-button"} %>
   </div>
 </div>
+<div clas="row">
+  <div class="small-5 small-offset-1 columns text-center">
+  	<%= link_to "Filter Workouts", 'filter_workouts', {:class => "button round home-button"} %> 
+  </div>
+</div>
 </section>
