--- a/app/views/posts/filter_by_time.html.erb
+++ b/app/views/posts/filter_by_time.html.erb
@@ -1,10 +1,11 @@
-<%= form_tag("/filter_workouts", method: "get") do %>
+<%= form_tag("/filter_by_workout", method: "get") do %>
   <%= label_tag(:workout_search, "Search for workout type:") %>
   <%= text_field_tag :workout_search, params[:workout_search] %>
   <%= submit_tag("Find me a workout!") %>
 <% end %>
 
-OR <%= link_to "Show me all workouts", posts_path %> 
+OR <%= link_to "Show me all workouts", posts_path %>
+OR <%= link_to "Search by workout", 'filter_by_workout' %>
 
 <h2>Filtered Workouts</h2>
 <% if @filtered_by_workout.empty? %>
