--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,15 +5,10 @@
 <section class="hero">
 <div class="row">
   <div class="small-5 small-offset-1 columns text-center">
-  	<%= link_to "Find a Workout", posts_path, {:class => "button round home-button"} %> 
+    <%= link_to "Find a Workout", 'find_a_workout', {:class => "button round home-button"} %>
   </div>
   <div class="small-5 columns end text-center">
-  	<%= link_to "Post a Workout", new_post_path, {:class => "button round home-button"} %>
-  </div>
-</div>
-<div clas="row">
-  <div class="small-5 small-offset-1 columns text-center">
-	<%= link_to "Filter Workouts", 'filter_workouts', {:class => "button round home-button"} %>
+	<%= link_to "Post a Workout", new_post_path, {:class => "button round home-button"} %>
   </div>
 </div>
 </section>
