--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,71 +1,75 @@
-<h3><%= @user.proper_name %></h3>
-<% unless @user.photo_url.nil? %>
-  <p><%= image_tag @user.photo_url %></p>
-<% end %>
-<p>
-  <b>Email</b>: <%= mail_to @user.email, @user.email, encode: "javascript" %>
-</p>
-<p><b>Phone</b>: <%= number_to_phone(@user.phone) %>
-</p>
+<div class="row profile-page">
+  <div class="small-12 medium-4 columns profile">
+    <h2 class="text-center mont"><%= @user.proper_name %></h2>
+    <% unless @user.photo_url.nil? %>
+      <p class="text-center"><%= image_tag @user.photo_url, :class => 'img-circle'%></p>
+    <% end %>
+    <p>
+      <b>Email</b>: <%= mail_to @user.email, @user.email, encode: "javascript" %>
+    </p>
+    <p><b>Phone</b>: <%= number_to_phone(@user.phone) %>
+    </p>
+    <p>
+      <b>About Me</b>: <%= @user.about_me %>
+    </p>
+  </div>
+  <div class="small-12 medium-8 columns">
+      <p><b>Upcoming Tagalongs:</b>
+    <% if @user_upcoming_tagalongs.empty? %>
+      &nbsp;&nbsp;<em>No scheduled tagalongs at this time.</em> Do you want to <%=link_to "schedule", new_post_path %> one? 
+    <% else %>
+      <ul>
+        <% @user_upcoming_tagalongs.each do |tagalong| %>
+          <li><%= tagalong.post.title %>  @  <%= tagalong.post.datetime %>) <br>
+              Contact <%= tagalong.post.user.first_name %> at <%= number_to_phone(tagalong.post.user.phone) %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </p>
 
-<p><b>Upcoming Tagalongs:</b>
-  <% if @user_upcoming_tagalongs.empty? %>
-    &nbsp;&nbsp;<em>No scheduled tagalongs at this time.</em> Do you want to <%=link_to "schedule", new_post_path %> one? 
-  <% else %>
-    <ul>
-  		<% @user_upcoming_tagalongs.each do |tagalong| %>
-        <li><%= tagalong.post.title %>  @  <%= tagalong.post.datetime %>) <br>
-            Contact <%= tagalong.post.user.first_name %> at <%= number_to_phone(tagalong.post.user.phone) %>
-        </li>
-  		<% end %>
-  	</ul>
-  <% end %>
-</p>
-
-<p><b>Past Tagalongs:</b>
-  <% if @user_past_tagalongs.empty? %>
-    &nbsp;&nbsp;<em>No past workouts at this time.</em>
-  <% else %>
-    <ul>
-      <% @user_past_tagalongs.each do |tagalong| %>
-          <div style="border:1px solid black">
-            <li><%= tagalong.post.title %>  @  <%= tagalong.post.datetime %></li>
-            <% if tagalong.review != nil %>
-              <%= render :partial => "show_review", locals:{ tagalong: tagalong} %>
-            <% else %>
-              <%= render :partial => "review_form", locals: { tagalong: tagalong} %>
-            <% end %>
-          </div>
-      <% end %>
-    </ul>
-  <% end %>
-</p>
+  <p><b>Past Tagalongs:</b>
+    <% if @user_past_tagalongs.empty? %>
+      &nbsp;&nbsp;<em>No past workouts at this time.</em>
+    <% else %>
+      <ul>
+        <% @user_past_tagalongs.each do |tagalong| %>
+            <div style="border:1px solid black">
+              <li><%= tagalong.post.title %>  @  <%= tagalong.post.datetime %></li>
+              <% if tagalong.review != nil %>
+                <%= render :partial => "show_review", locals:{ tagalong: tagalong} %>
+              <% else %>
+                <%= render :partial => "review_form", locals: { tagalong: tagalong} %>
+              <% end %>
+            </div>
+        <% end %>
+      </ul>
+    <% end %>
+  </p>
 
 
-<p><b>Upcoming Events:</b>
-  <% if @user_upcoming_posts.empty? %>
-    &nbsp;&nbsp;<em>No scheduled workouts at this time.</em> Do you want to <%=link_to "schedule", new_post_path %> one? 
-  <% else %>
-    <ul>
-      <% @user_upcoming_posts.each do |post| %>
-        <li><%= post.title %>  @  <%= post.datetime %> </li>
-      <%end %>
-    </ul>
-  <% end %>
-</p>
+  <p><b>Upcoming Events:</b>
+    <% if @user_upcoming_posts.empty? %>
+      &nbsp;&nbsp;<em>No scheduled workouts at this time.</em> Do you want to <%=link_to "schedule", new_post_path %> one? 
+    <% else %>
+      <ul>
+        <% @user_upcoming_posts.each do |post| %>
+          <li><%= post.title %>  @  <%= post.datetime %> </li>
+        <%end %>
+      </ul>
+    <% end %>
+  </p>
 
-<p><b>Past Events:</b>
-  <% if @user_past_posts.empty? %>
-    &nbsp;&nbsp;<em>No past workouts at this time.</em>
-  <% else %>
-    <ul>
-      <% @user_past_posts.each do |post| %>
-        <li><%= post.title %>  @  <%= post.datetime %></li>
-      <% end %>
-    </ul>
-  <% end %>
-</p>
-
-<p>
-  <b>About Me</b>: <%= @user.about_me %>
-</p>
+  <p><b>Past Events:</b>
+    <% if @user_past_posts.empty? %>
+      &nbsp;&nbsp;<em>No past workouts at this time.</em>
+    <% else %>
+      <ul>
+        <% @user_past_posts.each do |post| %>
+          <li><%= post.title %>  @  <%= post.datetime %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  </p>
+  </div>
+</div>
