--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -65,7 +65,9 @@
 }
 
 .workout{
-	border: 1px #D1D1D1 solid;
+	padding-left: 0;
+	padding-right: 0;
+	border-bottom: 1px #D1D1D1 solid;
 }
 
 .row.full-width {
@@ -95,4 +97,44 @@ body{
 
 .profile-page .columns{
 	padding-top: 1em;
+}
+
+.my-events{
+	border-right: 1px solid #D1D1D1;
+}
+
+.avenir-header{
+	font-family: Avenir;
+	color: #697689;
+	padding-left: .9375em;
+	padding-right: .9375em;
+	padding-top: .4em;
+	padding-bottom: .2em;
+}
+
+.section-header{
+	padding-left: 0;
+	padding-right: 0;
+	border-bottom: 1px solid #D1D1D1;
+}
+
+.no-padding{
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.workout-title{
+	font-family: Avenir;
+	color: #697689;
+	font-weight: bold;
+}
+
+.workout-time{
+	font-family: Avenir;
+	color: #697689;
+}
+
+.workout-content{
+	padding-left: .9375em;
+	padding-right: .9375em;
 }
