--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,43 +1,59 @@
-<h2>All Upcoming Events</h2>
-
-<% @posts.each do |p| %>
-	<div class="workout">
+<div class="row full-width">
+	<div class="small-12 medium-4 columns my-events">
 		<div class="row">
-		<div class="small-4 columns">
-			<h3><%= p.title %></h3>
-		</div>
-		<div class="small-4 small-offset-4 columns">
-			<h3><%= p.datetime %></h3>
-		</div>
-		</div>
-		<div class="row">
-			<div class="small-12 columns">
-			<p><%= p.topic %></p>
-			<p><%= p.details %></p>
-			<p><%= link_to "View", post_path(p) %></p>
+			<div class="small-12 columns section-header">
+				<h4 class="avenir-header">My Events</h4>
 			</div>
 		</div>
-	</div>
-<% end %>
-
-<h2>My Events</h2>
-<% @my_posts.each do |p| %>
-	<div class="workout">
+		<% @my_posts.each do |p| %>
 		<div class="row">
-		<div class="small-4 columns">
-			<h3><%= p.title %></h3>
-		</div>
-		<div class="small-4 small-offset-4 columns">
-			<h3><%= p.datetime %></h3>
-		</div>
-		</div>
-		<div class="row">
-			<div class="small-12 columns">
-			<p><%= p.topic %></p>
-			<p><%= p.details %></p>
-			<p><%= link_to "View", post_path(p) %></p>
+			<div class="small-12 columns workout">
+				<div class="row workout-content">
+					<div class="small-12 columns">
+						<h4 class="workout-title"><%= p.title %></h4>
+					</div>
+					<div class="small-12 columns">
+						<h4 class="workout-time"><%= p.datetime %></h4>
+					</div>
+				</div>
+				<div class="row workout-content">
+					<div class="small-12 columns">
+						<p><%= link_to "View", post_path(p) %></p>
+					</div>
+				</div>
 			</div>
 		</div>
+		<% end %>
+		<%= link_to "Create Post", new_post_path %>
 	</div>
-<% end %>
-<%= link_to "Create Post", new_post_path %>
+	<div class="small-12 medium-8 columns">
+		<div class="row">
+			<div class="small-12 columns section-header">
+				<h4 class="avenir-header">Available Workouts</h4>
+			</div>
+		</div>
+		<% @posts.each do |p| %>
+		<div class="row">
+			<div class="small-12 columns workout">
+				<div class="row workout-content">
+					<div class="small-4 columns">
+						<h4 class="workout-title"><%= p.title %></h4>
+					</div>
+					<div class="small-5 small-offset-3 end columns">
+						<h4 class="workout-time"><%= p.datetime %></h4>
+					</div>
+				</div>
+				<div class="row workout-content">
+					<div class="small-12 columns">
+						<p><%= p.topic %></p>
+					</div>
+					<div class="small-12 columns">
+						<p><%= p.details %></p>
+						<p><%= link_to "View", post_path(p) %></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<% end %>
+	</div>
+</div>
