--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,48 @@
-<h2> Details: </h2> 
-<p> Owner: <%= @post.user.proper_name %></p> 
-<p> Title: <%= @post.title %> </p>
-<p> Topic: <%= @post.topic %> </p>
-<p> Begins: <%= @post.datetime %> </p>
-<p> Expected Duration: <%= @post.expected_duration_hr %> Hours <%= @post.expected_duration_min %> Minutes</p>
-<p> Details: <%= @post.details %> </p>
-<p> Cancelled: <%= @post.cancelled %> </p>
-<p> Estimated Difficulty: <%= @post.estimated_difficulty %> </p>
+<div class="row">
+        <div class="small-12 columns">
+        <div class="row">
+          <div class="small-6 columns">
+            <h4 class="workout-title"><%= @post.title %></h4>
+          </div>
+          <div class="small-4 small-offset-2 end columns">
+            <h4 class="workout-time"><%= @post.datetime %></h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="small-12 columns">
+            <p><%= @post.topic %></p>
+          </div>
+          <div class="small-12 columns">
+            <p><%= @post.details %></p>
+          </div>
+          <div class="small-12 columns">
+            <p>Estimated Difficulty: <%= @post.estimated_difficulty %></p>
+          </div>
+          <div class="small-12 columns">
+            <p> Expected Duration: <%= @post.expected_duration_hr %> Hours <%= @post.expected_duration_min %> Minutes</p>
+            <p> Cancelled: <%= @post.cancelled %> </p>
+          </div>
+          <div class="small-12 columns">
+            <% @post.tagalongs.each do |tagalong| %>
+              <div style="border:1px solid black">
+                <p><%= tagalong.user.first_name %> <%= tagalong.user.last_name%></p>
+                <% if current_user.id == @post.owner_id %> 
+                  <%= simple_form_for tagalong do |f| %>
+                    <p>Showed Up? <%= tagalong.showed_up %>
+                      <%= f.hidden_field :showed_up, value: !tagalong.showed_up %>
+                    <%= f.button :submit, value: "Toggle Showed Up" %> </p>
+                  <% end %>
+                <% end %>
+              </div>
+            <% end %>
 
-<h2> Tagalongs: </h2>
-<% @post.tagalongs.each do |tagalong| %>
-  <div style="border:1px solid black">
-    <p><%= tagalong.user.first_name %> <%= tagalong.user.last_name%></p>
-    <% if current_user.id == @post.owner_id %> 
-      <%= simple_form_for tagalong do |f| %>
-        <p>Showed Up? <%= tagalong.showed_up %>
-          <%= f.hidden_field :showed_up, value: !tagalong.showed_up %>
-        <%= f.button :submit, value: "Toggle Showed Up" %> </p>
-      <% end %>
-    <% end %>
-  </div>
-<% end %>
-
-<% if !(Tagalong.exists?(:user_id => current_user.id, :post_id => @post.id )) && current_user.id != @post.owner_id %>
-  <%= render partial: "addtagalong_form", locals: { post: @post} %>
-<% end %>
+            <% if !(Tagalong.exists?(:user_id => current_user.id, :post_id => @post.id )) && current_user.id != @post.owner_id %>
+              <%= render partial: "addtagalong_form", locals: { post: @post} %>
+            <% end %>
+          </div>
+        </div>
+      </div>
 
 <%= link_to "Back", posts_path %>
+
+</div>
