changed styling for index

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <div class="row profile-page">
   <div class="small-12 medium-4 columns profile">
     <h2 class="text-center mont"><%= @user.proper_name %></h2>
-    <% unless @user.photo_url.nil? %>
+    <% if @user.photo_url.nil? %>
+      <p class="text-center"><img src="http://loremflickr.com/320/320/headshot/all" class="img-circle"></p>
+    <% else %>
       <p class="text-center"><%= image_tag @user.photo_url, :class => 'img-circle'%></p>
     <% end %>
     <p>
