--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -68,6 +68,7 @@
 	padding-left: 0;
 	padding-right: 0;
 	border-bottom: 1px #D1D1D1 solid;
+	border-left: 1px #D1D1D1 solid;
 }
 
 .row.full-width {
@@ -100,7 +101,6 @@ body{
 }
 
 .my-events{
-	border-right: 1px solid #D1D1D1;
 }
 
 .avenir-header{
