--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,9 +37,9 @@
             <div style="border:1px solid black">
               <li><%= tagalong.post.title %>  @  <%= tagalong.post.datetime %></li>
               <% if tagalong.review != nil %>
-                <%= render :partial => "show_review", locals:{ tagalong: tagalong} %>
+                <%= render partial: "show_review", locals:{ tagalong: tagalong} %>
               <% else %>
-                <%= render :partial => "review_form", locals: { tagalong: tagalong} %>
+                <%= render partial: "review_form", locals: { tagalong: tagalong} %>
               <% end %>
             </div>
         <% end %>
