--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,28 @@
 <div class="row">
-        <div class="small-12 columns">
+    <div class="row">
+      <div class="small-12 columns section-header">
+        <h4 class="avenir-header workout-title"><%= @post.title %></h4>
+      </div>
+    </div>
+    <div class="row workout-show">
+      <div class="small-3 columns text-center">
+        <h4 class="profile-name"><%= @post.user.proper_name %></h4>
+        <% if @post.user.photo_url.nil? %>
+          <p class="text-center"><img src="http://loremflickr.com/320/320/headshot/all" class="img-circle-small"></p>
+        <% else %>
+          <p class="text-center"><%= image_tag @post.user.photo_url, :class => 'img-circle-small'%></p>
+        <% end %>
+      </div>
+      <div class="small-9 columns">
         <div class="row">
-          <div class="small-6 columns">
-            <h4 class="workout-title"><%= @post.title %></h4>
+          <div class="small-4 columns">
+            <h4 class="workout-title"><%= @post.topic %></h4>
           </div>
-          <div class="small-4 small-offset-2 end columns">
+          <div class="small-5 small-offset-3 end columns">
             <h4 class="workout-time"><%= @post.datetime %></h4>
           </div>
         </div>
-        <div class="row">
-          <div class="small-12 columns">
-            <p><%= @post.topic %></p>
-          </div>
+        <div class="row workout-show">
           <div class="small-12 columns">
             <p><%= @post.details %></p>
           </div>
@@ -20,7 +31,9 @@
           </div>
           <div class="small-12 columns">
             <p> Expected Duration: <%= @post.expected_duration_hr %> Hours <%= @post.expected_duration_min %> Minutes</p>
+            <% if @post.cancelled == true %>
             <p> Cancelled: <%= @post.cancelled %> </p>
+            <% end %>
           </div>
           <div class="small-12 columns">
             <% @post.tagalongs.each do |tagalong| %>
@@ -40,9 +53,8 @@
               <%= render partial: "addtagalong_form", locals: { post: @post} %>
             <% end %>
           </div>
+          <%= link_to "Back", posts_path %>
         </div>
       </div>
-
-<%= link_to "Back", posts_path %>
-
+    </div>
 </div>
