--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,43 +1,47 @@
-<h2>All Upcoming Events</h2>
+<% if can? :read, Post %>
+	<h2>All Upcoming Events</h2>
 
-<% @posts.each do |p| %>
-	<div class="workout">
-		<div class="row">
-		<div class="small-4 columns">
-			<h3><%= p.title %></h3>
-		</div>
-		<div class="small-4 small-offset-4 columns">
-			<h3><%= p.datetime %></h3>
-		</div>
-		</div>
-		<div class="row">
-			<div class="small-12 columns">
-			<p><%= p.topic %></p>
-			<p><%= p.details %></p>
-			<p><%= link_to "View", post_path(p) %></p>
+	<% @posts.each do |p| %>
+		<div class="workout">
+			<div class="row">
+			<div class="small-4 columns">
+				<h3><%= p.title %></h3>
+			</div>
+			<div class="small-4 small-offset-4 columns">
+				<h3><%= p.datetime %></h3>
+			</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+				<p><%= p.topic %></p>
+				<p><%= p.details %></p>
+				<p><%= link_to "View", post_path(p) %></p>
+				</div>
 			</div>
 		</div>
-	</div>
-<% end %>
+	<% end %>
 
-<h2>My Events</h2>
-<% @my_posts.each do |p| %>
-	<div class="workout">
-		<div class="row">
-		<div class="small-4 columns">
-			<h3><%= p.title %></h3>
-		</div>
-		<div class="small-4 small-offset-4 columns">
-			<h3><%= p.datetime %></h3>
-		</div>
-		</div>
-		<div class="row">
-			<div class="small-12 columns">
-			<p><%= p.topic %></p>
-			<p><%= p.details %></p>
-			<p><%= link_to "View", post_path(p) %></p>
+	<h2>My Events</h2>
+	<% @my_posts.each do |p| %>
+		<div class="workout">
+			<div class="row">
+			<div class="small-4 columns">
+				<h3><%= p.title %></h3>
+			</div>
+			<div class="small-4 small-offset-4 columns">
+				<h3><%= p.datetime %></h3>
+			</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+				<p><%= p.topic %></p>
+				<p><%= p.details %></p>
+				<p><%= link_to "View", post_path(p) %></p>
+				</div>
 			</div>
 		</div>
-	</div>
+	<% end %>
+	<%= link_to "Create Post", new_post_path %>
+<% else %>
+ <p> you must log in to perform this action </p>
 <% end %>
-<%= link_to "Create Post", new_post_path %>
