--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,7 @@
       <%= f.input :password %>
       <%= f.input :password_confirmation %>
       <%= f.input :about_me %>
+      <%= f.hidden_field :role,  value: :user%>
       <%= f.button :submit %>
     <% end %>
   </div>
