fixed tagalong issue. should now show upcoming tagalongs that are approved

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 
     <p><b>Past Tagalongs:</b>
       <% if @user_past_tagalongs.empty? %>
-        &nbsp;&nbsp;<em>No past workouts at this time.</em>
+        &nbsp;&nbsp;<em>No past tagalongs at this time.</em>
       <% else %>
         <ul>
           <% @user_past_tagalongs.each do |tagalong| %>
